--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "macos_channel_name_fix",
+        "branch": "mplesa-macos-arm64",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
         }
